page alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,12 @@ body {
   color: #D9D9D9;
   padding: 20px;
   height: 100vh;
+}
+
+main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 header {
@@ -72,7 +76,6 @@ section.language-container {
 span.language-chip {
   padding: 5px;
   border-radius: 3px;
-  position: relative;
 }
 
 span.language-chip.lost::before {
@@ -90,7 +93,6 @@ span.language-chip.lost::before {
 }
 
 section.word-container {
-  margin-top: 40px;
   display: flex;
   justify-content: center;
   gap: 2px;
